// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query component Partial refetching should attempt a refetch when the query result was marked as being partial, the returned data was reset to an empty Object by the Apollo Client QueryManager (due to a cache miss), and the \`partialRefetch\` prop is \`true\` 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Missing field 'allPeople' while writing result {}",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Query component calls the children prop: result in render prop 1`] = `
Object {
  "called": true,
  "data": Object {
    "allPeople": Object {
      "people": Array [
        Object {
          "name": "Luke Skywalker",
        },
      ],
    },
  },
  "error": undefined,
  "fetchMore": [Function],
  "loading": false,
  "networkStatus": 7,
  "previousData": undefined,
  "refetch": [Function],
  "startPolling": [Function],
  "stopPolling": [Function],
  "subscribeToMore": [Function],
  "updateQuery": [Function],
  "variables": Object {},
}
`;

exports[`Query component calls the children prop: result in render prop while loading 1`] = `
Object {
  "called": true,
  "data": undefined,
  "error": undefined,
  "fetchMore": [Function],
  "loading": true,
  "networkStatus": 1,
  "previousData": undefined,
  "refetch": [Function],
  "startPolling": [Function],
  "stopPolling": [Function],
  "subscribeToMore": [Function],
  "updateQuery": [Function],
  "variables": Object {},
}
`;
